[package]
authors = ["Sridhar Ratnakumar <srid@srid.ca>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "nixci"
version = "0.5.0"
license = "AGPL-3.0-only"
readme = "README.md"
description = "Define and build CI for Nix projects anywhere"
homepage = "https://github.com/srid/nixci"
repository = "https://github.com/srid/nixci"
keywords = ["nix"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
colored = "2.0.4"
url = "2.4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
try-guard = "0.2.0"
clap = { version = "4.4", features = ["derive"] }
urlencoding = "2.1.3"
nix_rs = { version = "0.5.0", features = ["clap"] }
# nix_rs = { version = "0.5.0", path = "../nix-rs", features = ["clap"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"

[dev-dependencies]
regex = "1.9"
ctor = "0.2"

[features]
integration_test = []

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true
